# helelani_client

./: CMakeLists.txt  Data Plots.perspective  Navigation.perspective  README.md  package.xml  plugin.xml  setup.py
cmake/: FindQtAV.cmake
resources/: resources.qrc
scripts/: helelani_camera_control  helelani_command  helelani_imu  helelani_ip_cam  helelani_joystick_controls  helelani_mission_control_client  helelani_throttle_pad
src/: AttitudeWidget.cpp  AttitudeWidget.h  CameraControlWidget.cpp  CameraControlWidget.h  CommandLineEdit.h  DriveGamepad.cpp  DriveGamepad.h  DriveTrackpad.cpp  DriveTrackpad.h  HeadingWidget.cpp  HeadingWidget.h  HelelaniCameraControl.cpp  HelelaniCameraControl.h  HelelaniCameraControl.ui  HelelaniClient.cpp  HelelaniClient.h  HelelaniClient.ui  HelelaniCommand.cpp  HelelaniCommand.h  HelelaniCommand.ui  HelelaniIMU.cpp  HelelaniIMU.h  HelelaniIMU.ui  HelelaniIPCamViewer.cpp  HelelaniIPCamViewer.h  HelelaniIPCamViewer.ui  HelelaniJoystickControls.cpp  HelelaniJoystickControls.h  HelelaniJoystickControls.ui  HelelaniMissionControlClient.cpp  HelelaniMissionControlClient.h  HelelaniMissionControlClient.ui  HelelaniThrottlePad.cpp  HelelaniThrottlePad.h  HelelaniThrottlePad.ui  SVGHelper.h  SubVideoRendererWidget.h
